# HiveControl

./: .gitignore  DOWNLOAD_INSTRUCTIONS.md  EASY_INSTALL_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PACKAGING_IMPROVEMENTS.md  QUICK_REFERENCE.md  README  README.md  RELEASE  devupgrade.sh  easy-install.sh  install-raspberry-pi-5-64bit.sh  install.sh  reset.sh  upgrade-dev.sh  upgrade.sh
software/Phidgets/libphidget-2.1.8.20150410/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  clog.c  clog.h  clog.lo  com_phidgets_AccelerometerPhidget.lo  com_phidgets_AdvancedServoPhidget.lo  com_phidgets_AnalogPhidget.lo  com_phidgets_BridgePhidget.lo  com_phidgets_Dictionary.lo  com_phidgets_DictionaryKeyListener.lo  com_phidgets_EncoderPhidget.lo  com_phidgets_FrequencyCounterPhidget.lo  com_phidgets_GPSPhidget.lo  com_phidgets_IRPhidget.lo  com_phidgets_InterfaceKitPhidget.lo  com_phidgets_LEDPhidget.lo  com_phidgets_Manager.lo  com_phidgets_MotorControlPhidget.lo  com_phidgets_PHSensorPhidget.lo  com_phidgets_Phidget.lo  com_phidgets_RFIDPhidget.lo  com_phidgets_ServoPhidget.lo  com_phidgets_SpatialPhidget.lo  com_phidgets_StepperPhidget.lo  com_phidgets_TemperatureSensorPhidget.lo  com_phidgets_TextLCDPhidget.lo  com_phidgets_TextLEDPhidget.lo  com_phidgets_WeightSensorPhidget.lo  config.status  configure  configure.ac  cphidget.c  cphidget.h  cphidget.lo  cphidgetaccelerometer.c  (+114 more)
software/Phidgets/libphidget-2.1.8.20150410/.deps/: clog.Plo  com_phidgets_AccelerometerPhidget.Plo  com_phidgets_AdvancedServoPhidget.Plo  com_phidgets_AnalogPhidget.Plo  com_phidgets_BridgePhidget.Plo  com_phidgets_Dictionary.Plo  com_phidgets_DictionaryKeyListener.Plo  com_phidgets_EncoderPhidget.Plo  com_phidgets_FrequencyCounterPhidget.Plo  com_phidgets_GPSPhidget.Plo  com_phidgets_IRPhidget.Plo  com_phidgets_InterfaceKitPhidget.Plo  com_phidgets_LEDPhidget.Plo  com_phidgets_Manager.Plo  com_phidgets_MotorControlPhidget.Plo  com_phidgets_PHSensorPhidget.Plo  com_phidgets_Phidget.Plo  com_phidgets_RFIDPhidget.Plo  com_phidgets_ServoPhidget.Plo  com_phidgets_SpatialPhidget.Plo  com_phidgets_StepperPhidget.Plo  com_phidgets_TemperatureSensorPhidget.Plo  com_phidgets_TextLCDPhidget.Plo  com_phidgets_TextLEDPhidget.Plo  com_phidgets_WeightSensorPhidget.Plo  cphidget.Plo  cphidgetaccelerometer.Plo  cphidgetadvancedservo.Plo  cphidgetanalog.Plo  cphidgetbridge.Plo  cphidgetconstants.Plo  cphidgetdictionary.Plo  cphidgetencoder.Plo  cphidgetfrequencycounter.Plo  cphidgetgeneric.Plo  cphidgetgps.Plo  cphidgetinterfacekit.Plo  cphidgetir.Plo  cphidgetled.Plo  cphidgetlist.Plo  (+25 more)
software/Phidgets/libphidget-2.1.8.20150410/.libs/: libphidget21.lai
software/Phidgets/libphidget-2.1.8.20150410/Java/: com_phidgets_AccelerometerPhidget.c  com_phidgets_AccelerometerPhidget.h  com_phidgets_AdvancedServoPhidget.c  com_phidgets_AdvancedServoPhidget.h  com_phidgets_AnalogPhidget.c  com_phidgets_AnalogPhidget.h  com_phidgets_BridgePhidget.c  com_phidgets_BridgePhidget.h  com_phidgets_Dictionary.c  com_phidgets_Dictionary.h  com_phidgets_DictionaryKeyListener.c  com_phidgets_DictionaryKeyListener.h  com_phidgets_EncoderPhidget.c  com_phidgets_EncoderPhidget.h  com_phidgets_FrequencyCounterPhidget.c  com_phidgets_FrequencyCounterPhidget.h  com_phidgets_GPSPhidget.c  com_phidgets_GPSPhidget.h  com_phidgets_IRPhidget.c  com_phidgets_IRPhidget.h  com_phidgets_InterfaceKitPhidget.c  com_phidgets_InterfaceKitPhidget.h  com_phidgets_LEDPhidget.c  com_phidgets_LEDPhidget.h  com_phidgets_Manager.c  com_phidgets_Manager.h  com_phidgets_MotorControlPhidget.c  com_phidgets_MotorControlPhidget.h  com_phidgets_PHSensorPhidget.c  com_phidgets_PHSensorPhidget.h  com_phidgets_Phidget.c  com_phidgets_Phidget.h  com_phidgets_RFIDPhidget.c  com_phidgets_RFIDPhidget.h  com_phidgets_ServoPhidget.c  com_phidgets_ServoPhidget.h  com_phidgets_SpatialPhidget.c  com_phidgets_SpatialPhidget.h  com_phidgets_StepperPhidget.c  com_phidgets_StepperPhidget.h  (+10 more)
software/Phidgets/libphidget-2.1.8.20150410/Java/com/phidgets/: AccelerometerPhidget.java  AdvancedServoPhidget.java  AnalogPhidget.java  BridgePhidget.java  Dictionary.java  DictionaryKeyListener.java  EncoderPhidget.java  FrequencyCounterPhidget.java  GPSPhidget.java  IRCode.java  IRCodeInfo.java  IRLearnedCode.java  IRPhidget.java  InterfaceKitPhidget.java  LEDPhidget.java  Manager.java  MotorControlPhidget.java  PHSensorPhidget.java  Phidget.java  PhidgetException.java  RFIDPhidget.java  ServoPhidget.java  SpatialEventData.java  SpatialPhidget.java  StepperPhidget.java  TemperatureSensorPhidget.java  TextLCDPhidget.java  TextLEDPhidget.java  WeightSensorPhidget.java
software/Phidgets/libphidget-2.1.8.20150410/Java/com/phidgets/event/: AccelerationChangeEvent.java  AccelerationChangeListener.java  AttachEvent.java  AttachListener.java  BackEMFUpdateEvent.java  CodeEvent.java  (+64 more)
software/Phidgets/libphidget-2.1.8.20150410/dict/: pdict-impl.h  pdict.c  pdict.h  pdictclient.c  pdictclient.h
software/Phidgets/libphidget-2.1.8.20150410/examples/: Makefile  Makefile.am  Makefile.in  README  ifkit.c  manager.c  phidgetsbclist.c
software/Phidgets/libphidget-2.1.8.20150410/hotplug/: phidgets  phidgets.usermap
software/Phidgets/libphidget-2.1.8.20150410/include/: dns_sd.h
software/Phidgets/libphidget-2.1.8.20150410/include/jni/: jawt.h  jni.h  jvmdi.h  jvmpi.h
software/Phidgets/libphidget-2.1.8.20150410/include/jni/linux/: jawt_md.h  jni_md.h
software/Phidgets/libphidget-2.1.8.20150410/labview/: phidget_labview.c  phidget_labview.h
software/Phidgets/libphidget-2.1.8.20150410/linux/: cusblinux-1.0.c  cusblinux.c  zeroconf_avahi.c
software/Phidgets/libphidget-2.1.8.20150410/linux/avahi-client/: client.h  lookup.h  publish.h
software/Phidgets/libphidget-2.1.8.20150410/linux/avahi-common/: address.h  alternative.h  cdecl.h  defs.h  domain.h  error.h  gccmacro.h  llist.h  malloc.h  rlist.h  simple-watch.h  strlst.h  thread-watch.h  timeval.h  watch.h
software/Phidgets/libphidget-2.1.8.20150410/utils/: cvtutf.c  cvtutf.h  md5.c  md5.h  plist.c  plist.h  ptree.c  ptree.h  utils.c  utils.h
(+384 files in other folders)
